Bug #16392
closedtest-all failure Windows - TestEncoding#test_nonascii_library_path
Description
ruby-loco build failed, so ran the test locally using runner.rb. Failed on both of the below builds. The new test is valid, but the fix in 14a17063a1 doesn't seem to be working...
ruby 2.7.0dev (2019-12-02T23:51:50Z master 14a17063a1) [x64-mingw32] (Fixed stack overflow [Bug #16382])
ruby 2.7.0dev (2019-12-02T08:17:41Z master a47d6c256f) [x64-mingw32] (Fix random failure on getusage-missing environments)
1) Failure:
TestEncoding#test_nonascii_library_path [C:/Greg/GitHub/ruby/test/ruby/test_encoding.rb:128]:
Exception(LoadError) with message matches to /\[Bug #16382\]/.
[LoadError] exception expected, not #<SystemStackError: stack level too deep>.
Updated by MSP-Greg (Greg L) over 6 years ago
I haven't found what's different between the MinGW CI in ruby/ruby and ruby-loco. The above shows a test that fails in ruby-loco, but passes in ruby/ruby.
But, commit df76f2c5 'Make TracePoint.stat a singleton method again (#2726)' fails here:
https://ci.appveyor.com/project/ruby/ruby/builds/29324694/job/79hcogrsffiuktvo
but passed in ruby-loco:
https://ci.appveyor.com/project/MSP-Greg/ruby-loco/builds/29325308
I believe the actual commit that causes the failure is e3587ed 'Support disable-completion'
As mentioned elsewhere, ruby-loco is using fully updated MSYS2 gcc code, ruby/ruby is not...
Updated by MSP-Greg (Greg L) over 6 years ago
- Subject changed from test-all failure MinGW - TestEncoding#test_nonascii_library_path to test-all failure Windows - TestEncoding#test_nonascii_library_path
I ran Actions CI and saved the vc140 build as an artifact:
ruby 2.7.0dev (2019-12-12T23:58:42Z master 1140625cd3) [x64-mswin64_140]
Using it locally, had the same error as MinGW.
1) Failure:
TestEncoding#test_nonascii_library_path [C:/Greg/GitHub/ruby/test/ruby/test_encoding.rb:128]:
Exception(LoadError) with message matches to /\[Bug #16382\]/.
[LoadError] exception expected, not #<SystemStackError: stack level too deep>.
Note that it seems to pass when run on Appveyor...
Updated by nobu (Nobuyoshi Nakada) over 6 years ago
What encodings are used as the "filesystem" and "locale"?
Updated by MSP-Greg (Greg L) over 6 years ago
In a ps window:
ruby 2.7.0dev (2019-12-12T23:58:42Z master 1140625cd3) [x64-mswin64_140]
Encoding filesystem Windows-1252
Encoding locale IBM437
In both cmd & ps windows:
ruby 2.7.0dev (2019-12-15T07:48:52Z master 980ddca47e) [x64-mingw32]
Encoding filesystem Windows-1252
Encoding locale IBM437
Thanks, Greg
Updated by nobu (Nobuyoshi Nakada) over 6 years ago
- Status changed from Open to Closed
Applied in changeset git|04e95f8985066b4ae1e97b045efda98bdefa07bd.
Get rid of infinite recursion at loading transcoder
Disable encoding US-ASCII path to filesystem on Windows too.
[Bug #16392]