Get rid of infinite recursion at loading transcoder

Disable encoding US-ASCII path to filesystem on Windows too.
[Bug #16392]